--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,3 +20,5 @@ jobs:
       with:
         artifacts: "xlduckdb*.*"
         makeLatest: true
+        allowUpdates: true
+        artifactErrorsFailBuild: true
