--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     uses: ./.github/workflows/ci.yml
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     permissions:
       contents: write
     steps:
