--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,19 +3,15 @@ name: Releases
 on: 
   push:
     tags:
-    - '*'
+    - 'v*'
 
 jobs:
-
-  ci:
-    uses: ./.github/workflows/ci.yml
-
   build:
     runs-on: windows-2019
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v3
+    - uses: ./.github/workflows/ci.yml
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "xlduckdb*.*"
