--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v4
-    - uses: ./.github/workflows/ci.yml
+    - uses: .github/workflows/ci.yml
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "xlduckdb*.*"
