--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,40 @@ jobs:
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v4
-    - uses: ./.github/workflows/ci.yml
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
+    - name: Setup MSBuild.exe
+      uses: microsoft/setup-msbuild@v1
+
+   # Setup vstest
+    - name: Setup VSTest
+      uses: darenm/Setup-VSTest@v1
+
+    # Restore nuget packages
+    - name: Restore packages
+      run: nuget restore xlDuckDb.sln
+
+    # Build
+    - name: Build solution
+      run: msbuild xlDuckDb.sln -t:rebuild -property:Configuration=Release -property:ExcelDnaCreate32BitAddIn=false -property:ExcelDna64BitAddInSuffix= -property:RunExcelDnaPack=false -property:ExcelDna32BitAddInSuffix=32
+
+    # Run tests
+    - name: Unit test
+      run: vstest.console.exe /Platform:x64 .\UnitTests\bin\x64\Release\UnitTests.dll
+
+    # Upload binary
+    - name: "Upload binary"
+      uses: actions/upload-artifact@v4
+      with:
+        name: xlduckdb-${{ github.sha }}
+        path: .\xlDuckDb\bin\x64\Release\*.*
+        retention-days: 1      
+
+    # Create release
     - uses: ncipollo/release-action@v1
       with:
         artifacts: "xlduckdb*.*"
