--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,11 +53,12 @@ jobs:
 
     # Never mind that the previous step just did this...
     - name: ZIP release artifact
-      run: zip -r xlduckdb-${{ github.sha }}.zip .\xlDuckDb\bin\x64\Release\*.*
+      run: Compress-Archive -Path ./xlDuckDb/bin/x64/Release/*.* -Destination xlduckdb-${{ github.sha }}.zip
 
     # Create release
-    - name: GitHub release
-      id: release
-      run: gh release create ${{ github.ref }} "xlduckdb-${{ github.sha }}.zip" --generate-notes --notes-start-tag ${{ steps.previousTag.outputs.tag }} 
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: ncipollo/release-action@v1
+      with:
+        artifacts: "xlduckdb-${{ github.sha }}.zip"
+        makeLatest: true
+        allowUpdates: true
+        artifactErrorsFailBuild: true
