Changes to release workflow so it can be tested

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Releases
 
 on: 
+  workflow_dispatch:
+
   push:
     tags:
     - 'v*'
@@ -27,9 +29,9 @@ jobs:
       run: Compress-Archive -Path ./xlDuckDb/bin/Release/net6.0-windows/*.* -Destination xlduckdb.zip
 
     # Create release
-    - uses: ncipollo/release-action@v1
-      with:
-        artifacts: "xlduckdb.zip"
-        makeLatest: true
-        allowUpdates: true
-        artifactErrorsFailBuild: true
+    # - uses: ncipollo/release-action@v1
+      # with:
+        # artifacts: "xlduckdb.zip"
+        # makeLatest: true
+        # allowUpdates: true
+        # artifactErrorsFailBuild: true
