--- a/xlDuckDb/xlDuckDb.csproj
+++ b/xlDuckDb/xlDuckDb.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net6.0-windows</TargetFramework>
+	  <TargetFramework>net8.0-windows</TargetFramework>
 	  <RollForward>LatestMajor</RollForward>
      <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
     <PackageReference Include="DuckDB.NET.Bindings.Full" Version="1.3.0" />
     <PackageReference Include="DuckDB.NET.Data.Full" Version="1.3.0" />
     <PackageReference Include="ExcelDna.AddIn" Version="1.8.0" />
+    <PackageReference Include="ExcelDna.Interop" Version="15.0.1" />
   </ItemGroup>
 
 	<PropertyGroup>
