--- a/xlDuckDb/xlDuckDb.csproj
+++ b/xlDuckDb/xlDuckDb.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DuckDB.NET.Bindings.Full" Version="1.3.0" />
-    <PackageReference Include="DuckDB.NET.Data.Full" Version="1.3.0" />
-    <PackageReference Include="ExcelDna.AddIn" Version="1.8.0" />
+    <PackageReference Include="DuckDB.NET.Bindings.Full" Version="1.3.2" />
+    <PackageReference Include="DuckDB.NET.Data.Full" Version="1.3.2" />
+    <PackageReference Include="ExcelDna.AddIn" Version="1.9.0" />
     <PackageReference Include="ExcelDna.Interop" Version="15.0.1" />
   </ItemGroup>
 
@@ -19,6 +19,7 @@
 		<RunExcelDnaPack>false</RunExcelDnaPack>
 		<ExcelAddInName>xlDuckDb</ExcelAddInName>
 		<ExcelAddInFileName>xlDuckDb</ExcelAddInFileName>
+		<ExcelAddInExplicitExports>true</ExcelAddInExplicitExports>
 	</PropertyGroup>
 
 </Project>
